Added a link to the GitHub repository

--- a/index.html
+++ b/index.html
@@ -16,5 +16,14 @@
   </head>
   <body>
     <h1>Welcome to Athens</h1>
+    <footer>
+      The project was coded by Lili Gim and
+      <a
+        href="https://github.com/lili-gim/athens-travel-project"
+        target="_blank"
+      >
+        open sourced</a
+      >
+    </footer>
   </body>
 </html>
