Added subtitle to the homepage

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
   </head>
   <body>
     <h1>Welcome to Athens</h1>
+    <h2>Capital city of Greece</h2>
     <footer>
       The project was coded by Lili Gim and
       <a
