--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="/src/styles.css" />
+    <link rel="stylesheet" href="/athens-travel-project/src/styles.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -15,16 +15,22 @@
     <title>Welcome to Athens</title>
   </head>
   <body>
-    <h1>Welcome to Athens</h1>
-    <h2>Capital city of Greece</h2>
-    <footer>
-      The project was coded by Lili Gim and
-      <a
-        href="https://github.com/lili-gim/athens-travel-project"
-        target="_blank"
-      >
-        open sourced</a
-      >
-    </footer>
+    <div class="container">
+      <header>
+        <h3>.TRAVEL.</h3>
+        <h1>Welcome to Athens</h1>
+        <h2>Capital city of Greece</h2>
+        <a href="#more">Learn more</a>
+      </header>
+      <footer>
+        The project was coded by Lili Gim and
+        <a
+          href="https://github.com/lili-gim/athens-travel-project"
+          target="_blank"
+        >
+          open sourced</a
+        >
+      </footer>
+    </div>
   </body>
 </html>
