Added footer to the project

--- a/index.html
+++ b/index.html
@@ -22,15 +22,53 @@
         <h2>Capital city of Greece</h2>
         <a href="#more">Learn more</a>
       </header>
-      <footer>
-        The project was coded by Lili Gim and
-        <a
-          href="https://github.com/lili-gim/athens-travel-project"
-          target="_blank"
-        >
-          open sourced</a
-        >
-      </footer>
+    <footer>
+      <div class="container">
+        <div class="about-athens">
+          <h3>More about Athens</h3>
+          <ul>
+            <li>
+              <a href="https://www.aia.gr/traveler/" target="_blank"
+                >Athens Airport website</a
+              >
+            </li>
+            <li>
+              <a
+                href="https://www.google.com/maps/place/Athens,+Greece/@37.9908085,23.6559384,12z/data=!3m1!4b1!4m6!3m5!1s0x14a1bd1f067043f1:0x2736354576668ddd!8m2!3d37.9838096!4d23.7275388!16zL20vMG4yeg?entry=ttu&g_ep=EgoyMDI0MTIwMy4wIKXMDSoASAFQAw%3D%3D"
+                target="_blank"
+                >Map of Athens</a
+              >
+            </li>
+            <li>
+              <a href="https://www.stasy.gr/en/timetables/map/" target="_blank"
+                >Public transport map</a
+              >
+            </li>
+          </ul>
+        </div>
+        <div class="about-me">
+          <h3>About me</h3>
+          <p>
+            Hi! My name is Liliia and I'm very fond of culture and history of
+            Athens. I created this page as part of a project for SheCodes
+            Responsive to develop my coding skills.
+          </p>
+        </div>
+        <div class="about-website">
+          <h3>About this website</h3>
+          <p>
+            I created this page to share some information about Athens that can
+            be useful to plan your trip to Athens for the first time. The
+            project was coded by Lili Gim and
+            <a
+              href="https://github.com/lili-gim/athens-travel-project"
+              target="_blank"
+            >
+              open sourced.</a
+            >
+          </p>
+        </div>
+    </footer>
     </div>
   </body>
 </html>
