Updated html and css for footer

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
             </li>
             <li>
               <a
-                href="https://www.google.com/maps/place/Athens,+Greece/@37.9908085,23.6559384,12z/data=!3m1!4b1!4m6!3m5!1s0x14a1bd1f067043f1:0x2736354576668ddd!8m2!3d37.9838096!4d23.7275388!16zL20vMG4yeg?entry=ttu&g_ep=EgoyMDI0MTIwMy4wIKXMDSoASAFQAw%3D%3D"
+                href="https://maps.app.goo.gl/9NYeJi6VZ8vLqUyH7"
                 target="_blank"
                 >Map of Athens</a
               >
