--- a/index.html
+++ b/index.html
@@ -22,9 +22,10 @@
         <h2>Capital city of Greece</h2>
         <a href="#more">Learn more</a>
       </header>
-     <section class="athens-info">
+      <main>
+     <section class="grid grid-2-columns">
       <div>
-        <img src="/images/athens-section1.jpg" alt="acropolis" 
+        <img src="/images/athens-section1.jpg" alt="acropolis" class="img-responsive"
 
 >
       </div>
@@ -32,12 +33,13 @@
       <h3>WHY ATHENS?</h3>
       <h2>Athens, historical capital of Europe</h2>
       <p>Athens is one of the world’s oldest cities. It’s recorded history spanning around 3.400 years and it is being inhabited since the 11th millennium B.C. E.  Today, under the shadow of Parthenon, the contemporary urban scenery of the sprawling city reflects its exciting history, its multi- cultural modern personality as well as the infrastructure and facilities.</p>
-      <p>The perfect Mediterranean climate with the legendary greek sunlight, the unique combination of glorious history with modern, urban innovation, the coexistence of great culture with astonishing natural beauty, the high standard hotel accommodation, modern means of transportation such as the cutting edge modern metro, the vibrant rhythm of life, the wide choice of opportunities for shopping, dining and night life.</p>
-   <a href="https://www.visitgreece.gr/mainland/attica/athens/" target="_blank" title="https://www.visitgreece.gr/mainland/attica/athens/">⛵ Visit Greece</a>
+      <p>The perfect Mediterranean climate with the legendary greek sunlight, the unique combination of glorious history with modern, urban innovation, the coexistence of great culture with astonishing natural beauty, the high standard hotel accommodation, modern means of transportation such as the cutting edge modern metro, the vibrant rhythm of life, the wide choice of opportunities for shopping, dining and night life. <a href="https://www.visitgreece.gr/mainland/attica/athens/" target="_blank" title="https://www.visitgreece.gr/mainland/attica/athens/"><strong>⛵ Visit Greece</strong></a></p>
+ 
     </div>
     </section> 
+    </main>
       <footer>
-      <div class="container">
+      <section class="grid grid-3-columns-with-first-narrow">
         <div class="about-athens">
           <h3>More about Athens</h3>
           <ul>
@@ -81,7 +83,7 @@
               open sourced.</a
             >
           </p>
-        </div>
+        </section>
     </footer>
     </div>
   </body>
