Added section 2 with cards

--- a/index.html
+++ b/index.html
@@ -37,6 +37,48 @@
  
     </div>
     </section> 
+    <section class="cards">
+      <h3 class="text-center">CAFÉS</h3>
+      <h2 class="text-center">My favorite cafés in Athens</h2>
+      <div class="grid grid-3-columns">
+        <div>
+        <img src="/images/little-tree-books-and-coffee.JPG" alt="Little tree books and coffee cafe">
+        <h4>Little Tree Books and Coffee</h4>
+        <p>Bookstore & coffeehouse serving sandwiches & dessert in a laid-back setting with sidewalk seating.</p>
+        <h5>Address:</h5>
+        <p>Kavalloti 2, Athina 117 42</p>
+        <h5>What I like about it</h5>
+        <p>Cozy cute place to relax, have coffee and read a book as it is also a bookshop.</p>
+        <div class="cafe-btn">
+        <a class="btn" href="https://maps.app.goo.gl/obqc7qzDVHzHXg639">Learn more</a>
+        </div>
+        </div>
+         <div>
+        <img src="/images/melina-mercouri-café.jpg" alt="Melina Mercouri Café">
+        <h4>Melina Mercouri Café</h4>
+        <p>Classic all-day dining is offered at this old-timey bistro dedicated to actress Melina Mercouri.</p>
+        <h5>Address:</h5>
+        <p>Lisiou 22, Athina 105 56</p>
+        <h5>What I like about it</h5>
+        <p>Quiet place with an inteesting menu. It is lokated in the heart of Plaka.</p>
+        <div class="cafe-btn">
+        <a class="btn" href="https://maps.app.goo.gl/t12oC2yhsuSxFX4r9">Learn more</a>
+        </div>
+         </div>
+         <div>
+        <img src="/images/yiasemi.jpg" alt="Yiasemi">
+        <h4>Yiasemi</h4>
+        <p>Coffee, drinks, homemade pies & desserts in a snug traditional cafe with fireplace & outside seats.</p>
+        <h5>Address:</h5>
+        <p>Mnisikleous 23, Athina 105 55</p>
+        <h5>What I like about it</h5>
+        <p>Charming cafe restaurant with delicious food and excellent service.</p>
+        <div class="cafe-btn">
+        <a class="btn" href="https://maps.app.goo.gl/t12oC2yhsuSxFX4r9">Learn more</a>
+        </div>
+      </div>
+         </div>
+    </section>
     </main>
       <footer>
       <section class="grid grid-3-columns-with-first-narrow">
