Improved responsiveness of the web-page

--- a/index.html
+++ b/index.html
@@ -43,19 +43,19 @@
       <div class="grid grid-3-columns">
         <div class="card">
           <div class="card-header grid grid-2-columns">
-        <img class="img-responsive" src="/images/little-tree-books-and-coffee.JPG" alt="Little tree books and coffee cafe">
-        <iframe class="embed" src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d6290.768386958911!2d23.7270509!3d37.9681624!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x14a1bd1a11dfd849%3A0x54f8ff37020d4f3a!2sLittle%20Tree%20Books%20and%20Coffee!5e0!3m2!1sen!2sde!4v1733847160261!5m2!1sen!2sde" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+        <img class="img-responsive" src="/images/earth-athens-cafe.jfif" alt="Earth Athens Cafe">
+        <iframe class="embed" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3146.534901120229!2d23.6876322!3d37.9412946!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x14a1bd377a942501%3A0xb2a6a5200641d442!2sEarth%20Athens%20Cafe!5e0!3m2!1sen!2sde!4v1734020955088!5m2!1sen!2sde" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
           </div>
           <div class="card-body">
-        <h4>Little Tree Books and Coffee</h4>
-        <p>Bookstore & coffeehouse serving sandwiches & dessert in a laid-back setting with sidewalk seating.</p>
+        <h4>Earth Athens Cafe</h4>
+        <p>Earth is what we have in common. A high-end cafe & more.</p>
         <h5>Address:</h5>
-        <p>Kavalloti 2, Athina 117 42</p>
+        <p>Leof. Poseidonos 16, Athina 176 74</p>
         <h5>What I like about it</h5>
-        <p>Cozy cute place to relax, have coffee and read a book as it is also a bookshop.</p>
+        <p>Perfect place to relax, have coffee and catch up with friends.</p>
         </div>    
-        <div class="card-footer">
-        <a class="btn" href="https://maps.app.goo.gl/obqc7qzDVHzHXg639" target="_blank">Learn more</a>
+        <div class="card-footer card-footer-first">
+        <a class="btn" href="https://maps.app.goo.gl/c3SrtkrXPM5baxteA" target="_blank">Learn more</a>
         </div>
         </div>
         <div class="card">
@@ -91,7 +91,7 @@
         <p>Charming cafe restaurant with delicious food and excellent service.</p>
            </div>
            <div class="card-footer">
-        <a class="btn" href="hhttps://maps.app.goo.gl/DUnW4eA4aHoL17Md7" target="_blank">Learn more</a>
+        <a class="btn" href="https://maps.app.goo.gl/JYpgJjcPgpWnCTy37" target="_blank">Learn more</a>
       </div>
          </div>
          </div>
