Added a link in  header

--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
 >
       </div>
       <div>
+        <a name="more"></a>
       <h3>WHY ATHENS?</h3>
       <h2>Athens, historical capital of Europe</h2>
       <p>Athens is one of the world’s oldest cities. It’s recorded history spanning around 3.400 years and it is being inhabited since the 11th millennium B.C. E.  Today, under the shadow of Parthenon, the contemporary urban scenery of the sprawling city reflects its exciting history, its multi- cultural modern personality as well as the infrastructure and facilities.</p>
